--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Página web AlexCG</title>
+    <title>Next Acad</title>
+    <link rel="icon" type="image/png" href="img/Favicon.png"/>
     <link rel="stylesheet" href="css/estilos.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet"> 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
@@ -19,11 +21,11 @@
                     <img src="img/logo-jordan-alexander.png" alt="">
                 </div>
                 <div class="enlaces-header">
-                    <a href="#">Inicio</a>
-                    <a href="#">Inicio</a>
-                    <a href="#">Inicio</a>
-                    <a href="#">Inicio</a>
-                    <a href="#">Inicio</a>
+                    <a href="#">cursos</a>
+                    <a href="#">galería</a>
+                    <a href="#">blog</a>
+                    <a href="#">diccionario</a>
+                    <a href="#">Apoyar</a>
                 </div>
                 <div class="hamburguer">
                     <i class="fas fa-bars"></i>
@@ -33,9 +35,10 @@
         <div class="contenedor">
             <section class="contenido-header">
                 <section class="textos-header">
-                    <h1>Our creativity is your success</h1>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit, dolorum.</p>
-                    <a href="#">Learn more</a>
+                    <h1>Hola, estás en<br>Next Acad.</h1>
+                    <p>Una plataforma gratutita al servicio de la<br>comunidad donde aprender
+                    a programar<br>no volverá a ser dificil.</p>
+                    <a href="#">Comienza a aprender</a>
                 </section>
                 <img src="img/primeraIlustracion.svg" alt="">
             </section>
